# oop-python-nycu

./:  Introduction to Machine Learning.py  .gitignore  .gitmodules  110511198.txt  110652042.txt  113101020.txt  113511051_lec_5  113511088.txt  113511096.txt  113511159.txt  113511192_midterm.ipynb  113511209.txt  123.txt  2025_oop_midterm.ipynb  2025_oop_midterm_ori.ipynb  BouncyBall.py.save  DEADJOE  GUI  GUI test  GUI test2  Ginny113511070.txt  HW1_answer.ipynb  Lab08.py  Lab14-numpy-opencv.ipynb  Lawrence.txt  Lawrence113101018.txt  Leowang.txt  Makefile  README.md  arduino.py  ben.txt  brianname.txt  colab_jupyter.sh  commit_counts.xlsx  config.json  demo1_112511125.py  demo1_student.py  docker_join.sh  docker_mac.sh  docker_run.sh  (+54 more)
2680-cpp-labs/: lab5.py
Catventure/: Catventure.py  constants.py  records.txt
Docker/: Dockerfile  dockerfile
Week16/: lab16-mpd-trajectory.ipynb
aima/: test_map.py  test_route_problem.py
archived/: config.json  demo1.py  hello.txt  myname.txt
cpplabs/: 00_cpplabs.ipynb  Makefile  README.md
cpplabs/pybind11/: CMakeLists.txt  Makefile  SegList.cpp  Vertex.cpp  VertexSimple.cpp  cpplabs.cpp
cuda-lab-main/: .gitignore  README.md  gpu_run.sh  jupyter_notebook.sh  lab4-1.cu  lab4-1_cpu.cpp  lab5-1.ipynb
cuda-lab-main/lab4-2/: CMakeLists.txt  MatrixMultiplication.cu
docs/: 00-ssh-key.md  02-vim-python-ide.md  02-wsl2-tutorials.md  02.1-nemoclaw-openclaw.md  02.1-openclaw.md  04-neovim-copilot.md  05-python-compiler.md  06-pydot.md  07-update-submodule.md  09-warp-terminal.md  10-openai-python.md  11-cuda-cupy.md  12-termius.md  CodeSearchNet.md  Pyrobot-class-diagram-func.md  about.md  datasets-class-diagram.md  index.md  sb3-class-diagram.md  transformers-models-gpt2.md
dotuml/: a2c.dot  aima-problem.dot  cpplabs-SegList.dot  dqn.dot  gym-2019.dot  gymnasium.dot  her.dot  pd-gpd-mpd.dot  ppo.dot  proj-advanture.dot  pyivp-XYHexagon.dot  pyivp-XYObject.dot  pyivp-XYPatternBlock.dot
final-project/: README.md  b.py  count.py  final project GunGame.py  gunGame.mmd  panda.py  player_data.json
group6/: myname112511083.txt  myname112511125.txt
gym-examples/: duck_env.py  duck_in_a_row.py  lunarlander.py  render_geometry.py
lab0317/: Makefile  hello.py  math_utils.py  test_hello.py  test_math.py  test_math2.py
mit-ocw-exercises/: .gitignore  .test_lec12_sorting.py.un~  README.md  clean-code-python-06-05.py  clean-code-python-06-06.py  lec11_complexity_part2.py  lec8_classes.py  lec9_inheritance.py  plot_lec11_complexity_part2.py  test_lec10_complexity_part1.py  test_lec11_complexity_part2.py  test_lec12_bubble_sort.py  test_lec12_sorting.py  test_lec12_sorting.py~  test_lec3_strings_algos.py  test_lec8_classes.py  test_lec9_inheritance.py
pygame/: env.py  (+20 more)
(+2058 files in other folders)
